apc/dev/kong-ingress-apc-product-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress-dev-apc-product-service
  namespace: npp5
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong-dev-apc
  rules:
  - http:
      paths:
      - path: /product-service
        pathType: Prefix
        backend:
          service:
            name: apc-product-service
            port:
              number: 80
